[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rlm-mcp"
version = "0.1.0b1"
description = "MCP server for analyzing massive files with Claude Code using Recursive Language Models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Ahmed Ali"}
]
keywords = [
    "mcp",
    "claude",
    "claude-code",
    "llm",
    "recursive-language-model",
    "anthropic",
    "large-files",
    "document-analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]

dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
rlm-mcp = "rlm_mcp:main"

[project.urls]
Homepage = "https://github.com/ahmedm224/rlm-mcp"
Repository = "https://github.com/ahmedm224/rlm-mcp"
Issues = "https://github.com/ahmedm224/rlm-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["rlm_mcp"]
